# iowarp-mcps

./: CLAUDE.md  CONTRIBUTING.md  README.md  TEST_COVERAGE_IMPROVEMENT_PLAN.md  pyproject.toml  test_wrp_framework.py
.github/workflows/: docs-and-website.yml  publish.yml  quality_control.yml  test-chronomcp.yml  test-mcps.yml  wrp-tests.yml
docs/: docusaurus.config.js
iowarp-ai-devkit/: FASTMCP_2.0_DOCUMENTATION.md  FASTMCP_LATEST_FEATURES.md
iowarp-ai-devkit/design_principles/: DESIGN.md
iowarp-ai-devkit/h5py_docs/: Attributes — h5py 3.13.0 documentation.md  Datasets — h5py 3.13.0 documentation.md  File Objects — h5py 3.13.0 documentation.md  Groups — h5py 3.13.0 documentation.md  H5PY_3.15_OFFICIAL.md  How To Use Hdf5 Files In Python.md  Single Writer Multiple Reader (SWMR) — h5py 3.13.0 documentation.md  Special types — h5py 3.13.0 documentation.md  Strings in HDF5 — h5py 3.13.0 documentation.md
iowarp_mcp_clients/wrp_bin/docs/: Installation.md  instructions.md
iowarp_mcp_clients/wrp_bin/test/: test_wrp.yaml
iowarp_mcp_clients/wrp_bin/wrp_client/: helpers.py  mcp_manager.py
iowarp_mcp_servers/adios/: README.md  pyproject.toml
iowarp_mcp_servers/adios/docs/: basic_install.md  example_uses.md
iowarp_mcp_servers/arxiv/: README.md  pyproject.toml
iowarp_mcp_servers/arxiv/docs/: basic_install.md
iowarp_mcp_servers/chronolog/: README.md  pyproject.toml
iowarp_mcp_servers/compression/: README.md  pyproject.toml
iowarp_mcp_servers/darshan/: README.md  pyproject.toml
iowarp_mcp_servers/hdf5/: .gitignore  README.md  pyproject.toml
iowarp_mcp_servers/hdf5/docs/: EXAMPLES.md  MIGRATION.md  TRANSPORTS.md
iowarp_mcp_servers/hdf5/examples/: README.md  create_demo_data.py  demo_script.py
iowarp_mcp_servers/hdf5/src/hdf5_mcp/: config.py  resources.py  server.py  utils.py
iowarp_mcp_servers/hdf5/tests/: conftest.py
iowarp_mcp_servers/jarvis/: README.md  pyproject.toml
iowarp_mcp_servers/jarvis/docs/: GUIDE.md  basic_install.md
iowarp_mcp_servers/lmod/: README.md  pyproject.toml
iowarp_mcp_servers/ndp/: README.md  pyproject.toml
iowarp_mcp_servers/ndp/docs/: mcp_development_guide.md
iowarp_mcp_servers/node-hardware/: README.md  pyproject.toml
iowarp_mcp_servers/pandas/: README.md  pyproject.toml
iowarp_mcp_servers/parallel-sort/: README.md  USAGE_GUIDE.md  pyproject.toml
iowarp_mcp_servers/parquet/: README.md  pyproject.toml
iowarp_mcp_servers/parquet.old/: pyproject.toml
iowarp_mcp_servers/parquet/datasets/: batch_1.parquet  batch_large_strings.parquet
iowarp_mcp_servers/parquet/tests/: conftest.py  test_boundary_rows.py  test_column_selection.py  test_data_types.py  test_default_parameters.py  test_filter_edge_cases.py  test_filtered_slice.py  test_filtering.py  test_get_column_preview.py  test_json_response_validation.py  test_malformed_files.py  test_null_handling.py  test_path_security.py  test_performance.py  test_read_slice.py  test_response_format.py  test_tool_consistency.py
iowarp_mcp_servers/plot/: README.md  pyproject.toml
iowarp_mcp_servers/slurm/: README.md  pyproject.toml
iowarp_mcp_servers/slurm/docs/: basic_install.md  run.md
iowarp_mcp_webpage/: README.md  docusaurus.config.js
iowarp_mcp_webpage/docs/: intro.md
iowarp_mcp_webpage/docs/mcps/: adios.md  arxiv.md  chronolog.md  compression.md  darshan.md  hdf5.md  jarvis.md  lmod.md  ndp.md  node_hardware.md  pandas.md  parallel_sort.md  parquet.md  plot.md  slurm.md
iowarp_mcp_webpage/src/css/: custom.css
iowarp_mcp_webpage/src/data/: mcpData.js
iowarp_mcp_webpage/src/pages/: index.js
mcps/Adios/: pyproject.toml
mcps/Adios/src/: mcp_handlers.py  server.py
mcps/Adios/tests/: test_bp5_attributes.py  test_bp5_inspect_variables.py
mcps/Arxiv/: pyproject.toml
mcps/Arxiv/src/: mcp_handlers.py  server.py
mcps/Arxiv/tests/: test_advanced_scenarios.py  test_arxiv_base_errors.py  test_download_paper.py  test_edge_cases.py  test_export_utils.py  test_fastmcp_tools.py  test_mcp_handlers.py  test_paper_details.py  test_server.py  test_text_search.py
mcps/Chronolog/: pyproject.toml
mcps/Chronolog/tests/: test_helpers.py  test_integration.py  test_record_handler.py  test_retrieve_handler.py  test_start_handler.py  test_stop_handler.py  test_utils.py
mcps/Compression/: pyproject.toml
mcps/Compression/tests/: test_compression_handler.py  test_integration.py  test_mcp_handlers.py
mcps/Darshan/: pyproject.toml
mcps/Darshan/src/: server.py
mcps/HDF5/: pyproject.toml
mcps/HDF5/src/: mcp_handlers.py  server.py
mcps/HDF5/tests/: test_mcp_handlers.py  test_server.py
mcps/Jarvis/: README.md  pyproject.toml
mcps/Jarvis/src/: server.py
mcps/Jarvis/tests/: conftest.py  run_tests.py  test_basic.py  test_edge_cases.py  test_integration.py  test_jarvis_handler.py  test_server.py  utils.py
mcps/NDP/: README.md  pyproject.toml  requirements.txt
mcps/NDP/earthscope_output/: dataset_summary.md  rhcl.geojson
mcps/NDP/src/: __init__.py  ndp_mcp_server.py
mcps/NDP/test/: README.md  earthscope_workflow.py  run_tests.py  test_server.py  test_stdio.py
mcps/Node_Hardware/: README.md  pyproject.toml
mcps/Node_Hardware/src/: server.py
mcps/Pandas/: README.md  pyproject.toml
mcps/Pandas/src/: __init__.py  server.py
mcps/Pandas/tests/: test_mcp_handlers.py
mcps/Parallel_Sort/: pyproject.toml
mcps/Parallel_Sort/src/: mcp_handlers.py  server.py
mcps/Parallel_Sort/tests/: test_filter_handler.py  test_mcp_handlers.py  test_server.py
mcps/Plot/: README.md  pyproject.toml
mcps/Plot/src/: server.py
mcps/Plot/tests/: conftest.py  test_capabilities.py  test_capabilities_coverage.py  test_complete.py  test_complete_coverage.py  test_handlers.py  test_integration.py  test_main_execution.py  test_plot_mcp.py  test_server.py  test_server_complete.py  test_server_coverage.py  test_server_tools_direct.py
mcps/Slurm/: README.md  pyproject.toml
mcps/Slurm/src/: server.py
mcps/Slurm/tests/: conftest.py  test_capabilities.py  test_mcp_handlers.py  (+3 more)
mcps/lmod/: pyproject.toml
mcps/parquet/: pyproject.toml
src/iowarp_mcps/: __init__.py
(+47 files in other folders)
