[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iowarp-mcps"
version = "0.4.0"
description = "Open Source MCP Servers for Scientific Computing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "IoWarp Team - Gnosis Research Center", email = "grc@illinoistech.edu"}
]

# Only dependencies needed for the launcher
dependencies = [
  "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/iowarp/iowarp-mcps"
Repository = "https://github.com/iowarp/iowarp-mcps"
Issues = "https://github.com/iowarp/iowarp-mcps/issues"

[project.scripts]
# Only the unified launcher entry point
iowarp-mcps = "iowarp_mcps:cli"

[tool.hatch.build]
sources = ["src"]

# Include all server directories in the wheel for uvx execution
[tool.hatch.build.targets.wheel.shared-data]
"iowarp_mcp_servers" = "iowarp_mcp_servers"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "iowarp_mcp_servers/",
    "README.md",
    "pyproject.toml"
]
