[project]
name = "compression-mcp"
version = "1.0.0"
description = "Compression MCP server implementation using Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "IoWarp Team - Gnosis Research Center", email = "grc@illinoistech.edu" }
]

keywords = ["compression", "gzip", "storage", "archival", "backup", "analytics", "statistics"]

dependencies = [
    "fastmcp>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://iowarp.github.io/iowarp-mcps/"
Repository = "https://github.com/iowarp/iowarp-mcps"

[project.scripts]
compression-mcp = "server:main"

[dependency-groups]
dev = [
     "mypy>=1.17.0",
     "pytest>=8.3.5",
     "pytest-asyncio>=1.0.0",
     "pytest-cov>=6.2.1",
     "ruff>=0.12.5",
]

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"
