[project]
name = "pandas-mcp"
version = "1.0.0"
description = "Pandas MCP - Advanced Data Analysis for LLMs with comprehensive pandas operations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "IoWarp Team - Gnosis Research Center", email = "grc@illinoistech.edu" }
]
keywords = ["pandas", "data-analysis", "statistical-analysis", "data-science", "data-manipulation", "time-series", "data-cleaning", "data-transformation", "mcp", "llm-integration"]

dependencies = [
  "fastmcp",
  "python-dotenv>=1.0.0",
  "pandas>=2.2.0",
  "numpy<2",
  "scipy>=1.11.0",
  "pyarrow>=15.0.0",
  "openpyxl>=3.1.0",
  "xlrd>=2.0.0",
  "tables>=3.9.0",
  "psutil>=5.9.0",
  "pytest>=7.2.0"
]

[project.urls]
Homepage = "https://iowarp.github.io/iowarp-mcps/"
Repository = "https://github.com/iowarp/iowarp-mcps"

[project.scripts]
pandas-mcp = "server:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
]

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"
