[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ndp-mcp-server"
version = "1.0.0"
description = "Model Context Protocol (MCP) server for National Data Platform integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NDP MCP Team", email = "ndp-mcp@example.com"}
]
maintainers = [
    {name = "NDP MCP Team", email = "ndp-mcp@example.com"}
]
keywords = ["mcp", "national-data-platform", "earthscope", "geospatial", "data-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.8.0",
    "pandas>=2.0.0",
    "geopandas>=0.13.0",
    "shapely>=2.0.0",
    "requests>=2.28.0",
    "asyncio-throttle>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/example/ndp-mcp-server"
Documentation = "https://github.com/example/ndp-mcp-server#readme"
Repository = "https://github.com/example/ndp-mcp-server"
Issues = "https://github.com/example/ndp-mcp-server/issues"

[project.scripts]
ndp-mcp-server = "ndp.src.ndp_mcp_server:main"

[project.entry-points."mcp.servers"]
ndp = "ndp.src.ndp_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
